--- a/content/post/logisticregression.Rmd
+++ b/content/post/logisticregression.Rmd
@@ -130,7 +130,10 @@ summary(fit)
 
 To represent qualitative variables, R will build an indicator (dummy) variable using the lowest coded category as the reference group. For example, 
 
-
+$$Y=\begin{cases}
+0, & \text{if female}\\
+1, & \text{if male}
+\end{cases}$$
 
 ## Interpretation of parameter estimates of logistic regression
 
@@ -160,14 +163,35 @@ We can write the fitted logistic regression model as follows
 
 $$\hat{Y} = \frac{1}{1+e^{-z}} = \frac{1}{e^{-80.83 -7.40Chinstrap -8.42Gentoo +0.32Dream -0.50Torgersen + 0.61 bill\_length\_mm + 1.64 bill\_depth\_mm + 0.02 flipper\_length\_mm + 0.005 body\_mass\_g}}$$
 
+
+$$Chinstrap=\begin{cases}
+1, & \text{if Chinstrap}\\
+0, & \text{otherwise}
+\end{cases}$$
+
+$$Gentoo=\begin{cases}
+1, & \text{if Gentoo}\\
+0, & \text{otherwise}
+\end{cases}$$
+
+$$Dream=\begin{cases}
+1, & \text{if Dream}\\
+0, & \text{otherwise}
+\end{cases}$$
+
+
+$$Torgersen=\begin{cases}
+1, & \text{if Torgersen}\\
+0, & \text{otherwise}
+\end{cases}$$
+
 ## Interpretation of parameter estimates
 
 The variables species, bill length (mm), bill depth (mm) and body mass (g) significantly contribute to the model.
 
-Holding all other variables constant, this fitted model predicts that the odds of detecting a male are 1.38 times higher for penguins on Dream Island than on Biscoe.
+With all other factors held constant, this fitted model predicts that the odds of discovering a male penguin on Dream island are 1.38 times higher than on Biscoe island.
 
+For each one-unit increase in bill depth, the probabilities of detecting a male increased 5.18 times (95 percent CI 2.68–10.02). 
 
-The odds of detecting a male increased 1.005 times (95%CI 1.003–1.007) for each one-unit
-increase in the body mass (g).
 
 > Model Evaluation: Next Post! Model evaluation should be done before interpreting the model. 
