--- a/content/post/error1.Rmd
+++ b/content/post/error1.Rmd
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 While using Rstudio on macOS Mojave (version 10.14.6) to work with R, I recently ran across the following problem.
 
+<img src="/post/error.PNG" alt="final image" width="300"/>
 
-![](error.png)
 
 
 In order to fix the error, I deleted the `.Rprofile`. You can erase everything in the ".Rprofile" by using the commands listed below.
