--- a/content/post/quarto.Rmd
+++ b/content/post/quarto.Rmd
@@ -1,18 +1,70 @@
 ---
 title: "Building a website using Quarto"
 author: Thiyanga Talagala
-date: '2022-10-31'
+date: '2022-11-08'
 slug: blog
-categories: [R, RStudio, Quarto]
-tags: [R, RStudio, Quarto]
+categories: [R, RStudio, Quarto, Python]
+tags: [R, RStudio, Quarto, Python]
 summary: "In this post, you will learn how to build a website using Quarto."
 ---
+
+I created [this blog](https://thiyanga-spatiotemporal.netlify.app/) using Quarto. Here are the steps that I used to create the blog.
 
 ## Step 1
 
 Install Quarto. Follow the instructions in [this](https://quarto.org/docs/get-started/) tutorial.
 
+On R Console install Quarto using the command
 
+```r
+install.packages(quarto)
+```
+
+## Step 2
+
+Create a git hub repository and create a RStudio project.
+
+## Step 3
+
+The type the following command in the RStudio terminal
+
+```r
+quarto create-project myblog --type website:blog
+```
+
+This will create a folder called `myblog` with the following documents inside.
+
+<img src="/post/quarto.PNG" alt="final image" width="400"/>
+
+
+
+Copy all the documents inside the folder into your project folder, and delete the `myblog` folder.
+
+## Step 4
+
+Rename `index.qmd` to `blog.qmd` and rename `about.qmd` to `index.qmd`.
+
+## Step 5
+
+Include your details to `_quarto.yml`.
+
+## Step 6
+
+Click `Render` button to preview the blog.
+
+To preview the website in the current directory type the following command in the terminal
+
+```r
+quarto preview
+```
+
+## Step 7
+
+To publish the blog with Netlify, type the following command.
+
+```r
+quarto publish netlify
+```
 
 ## Other useful links
 
@@ -20,4 +72,4 @@ Install Quarto. Follow the instructions in [this](https://quarto.org/docs/get-st
 
 [https://quarto.org/docs/publishing/netlify.html](https://quarto.org/docs/publishing/netlify.htm)
 
-
+[https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/](https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/)
