--- a/content/post/tsviz.Rmd
+++ b/content/post/tsviz.Rmd
@@ -8,3 +8,29 @@ knitr::opts_chunk$set(eval=FALSE, echo = TRUE)
 ```
 
 
+## Step 1: Load packages
+
+```{r}
+library(tsibble)
+library(ggplot2)
+```
+
+## Step 2: `tsibble`
+
+index - 	
+A variable to specify the time index variable.
+
+An extensive range of indices are supported by tsibble:
+
+native time classes in R (such as Date, POSIXct, and difftime)
+
+tsibble's new additions (such as yearweek, yearmonth, and yearquarter).
+
+other commonly-used classes: ordered, hms::hms, lubridate::period, and nanotime::nanotime.
+
+key -  NULL indicates single time series.
+
+measured variables - 
+
+
+Source: https://tsibble.tidyverts.org/reference/tsibble-package.html
