--- a/content/post/quarto.Rmd
+++ b/content/post/quarto.Rmd
@@ -73,3 +73,5 @@ quarto publish netlify
 [https://quarto.org/docs/publishing/netlify.html](https://quarto.org/docs/publishing/netlify.htm)
 
 [https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/](https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/)
+
+[Themes](https://bootswatch.com/)
