--- a/content/post/posit.Rmd
+++ b/content/post/posit.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "My Posit::conf 2023 Experience - **A Conference of Insights, Knowledge, Connections, and Explorations**"
+title: "My Posit::conf 2023 Experience - A Conference of Insights, Knowledge, Connections, and Explorations"
 author: Thiyanga Talagala
-date: '2023-10-02'
+date: '2023-10-18'
 category: [R, Python]
 tags: [R, Python]
 ---
@@ -10,12 +10,13 @@ tags: [R, Python]
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<img src="/post/positimages/cb.png" alt="posit" width="900"/><img src="/post/positcover.png" alt="posit" width="900"/>
+<img src="/post/positimages/cb.png" alt="posit" width="900"/>
 
 
 The Posit::conf 2023 (formerly known as RStudio conference) was held in [Hyatt Regency in Chicago, Illinois, USA](https://www.google.com/maps/place/Hyatt+Regency+Chicago/@41.8874495,-87.6242363,17z/data=!3m2!4b1!5s0x880e2ca8e189d17b:0x5290a436f2868f40!4m9!3m8!1s0x880e2ca924587447:0x880c1ae8574967ef!5m2!4m1!1i2!8m2!3d41.8874455!4d-87.6216614!16s%2Fm%2F02vpgg1?entry=ttu) from 16 to 20 September, 2023. This was the first conference held since the name was changed from RStudio to Posit. It was a conference full of learning, making connections, and feeling inspired. As an attendee, I had the privilege of participating in workshops, attending various events, listening to great talks, meeting talented individuals, and experiencing the empowering atmosphere of R Ladies. I am immensely grateful for [Posit Software, PBC formerly RStudio, PBC](https://posit.co/) for this valuable opportunity. In this blog post, I'll share my experience from Posit::conf 2023.
 
-<img src="/post/positimages/hexwall.png" alt="posit" width="900"/>
+<img src="/post/positcover.png" alt="posit" width="900"/>
+
 
 # Safe, positive, inclusive and respectfu and welcoming atmosphere for everyone
 
@@ -36,7 +37,9 @@ The posit conference kicked off with This is Jan Pauls's inspiring story. On Ind
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8VCr_bohahw?si=xBcSrHlM3OgrRuf9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-The [keynotes, talks and lightning talks]()
+The [keynotes, talks and lightning talks](https://posit.co/blog/keynotes-and-talks-at-posit-conf-2023/) featured an impressive line-up of speakers on various topics. 
+The talks comprehensively address various facets of data science, spanning topics such as data wrangling, modeling, communication, production tools, reproducible research, open science, and sharing experiences on transitioning to R and Python. Jeremy Howard gave a fascinating keynote on [A Hackers’ Guide to Language Models](https://www.youtube.com/watch?v=jkrNMKz9pWU).
+
 
 # R Ladies
 
@@ -53,10 +56,13 @@ It was a fantastic initiative that ensured a diverse group of individuals had ac
 
 # Meeting Great People
 
-Lastly, the people I met. The R community is filled with passionate and talented individuals who are eager to collaborate and share knowledge. Building relationships with like-minded professionals and making new friends was truly invaluable.
+Lastly, the people I met. Ample opportunities were provided for conference attendees to expand their networks. These events included a book signing reception, engaging "Birds of a Feather" coffee meetups, and a lively trivia night, among others. The R community is filled with passionate and talented individuals who are eager to collaborate and share knowledge. Building relationships with like-minded professionals and making new friends was truly invaluable.
 
+<img src="/post/positimages/meetpeople.png" alt="posit" width="900"/>
 
 # Sightseeing After the Conference
 
-While Posit::conf 2023 was undeniably the highlight of my trip, I couldn't resist the allure of exploring the beautiful city that hosted this incredible event. After the conference wrapped up, I embarked on a sightseeing adventure that allowed me to immerse myself in the local culture and history. Here are some of the unforgettable moments 
+While Posit::conf 2023 was undeniably the highlight of my trip, I couldn't resist the allure of exploring the beautiful city that hosted this incredible event. After the conference wrapped up, I embarked on a sightseeing adventure that allowed me to immerse myself in the local culture and history.
+
+<img src="/post/positimages/site.png" alt="posit" width="900"/>
 
