--- a/content/post/owsd.Rmd
+++ b/content/post/owsd.Rmd
@@ -81,7 +81,7 @@ Participating in the OWSD competition gave me more than just a platform. I learn
 
 A huge thank you to Erin Johnson and Giulia Signori of the OWSD Secretariat. They highlighted the positive aspects of each talk and appreciated the valuable messages shared with the audience. The way they organized the event was also an excellent learning experience for us, providing insights into effective event planning and audience engagement.
 
-A big shout-out to UNESCO-OWSD and The World Academy of Sciences (TWAS) for providing this valuable opportunity by organizing such an impactful event,
+A big shout-out to UNESCO-OWSD and The World Academy of Sciences (TWAS) for providing this valuable opportunity by organizing such an impactful event.
 
 ## My 180 seconds might have been short, but the impact it created will stay with me for a long time.
 
