--- a/content/post/feb112026.Rmd
+++ b/content/post/feb112026.Rmd
@@ -2,9 +2,8 @@
 title: "Recreating Nightingale's most famous diagram, known as the Coxcomb"
 author: Thiyanga Talagala
 date: '2026-02-11'
-slug: blog
-categories: [ggplot2]
-tags: [R, ggplot2]
+categories: [ggplot2, tidyverse, data visualisation]
+tags: [R, ggplot2, International Day of Women and Girls in Science.]
 summary: "February 11, is recognized globally as the International Day of Women and Girls in Science."
 ---
 
