--- a/content/post/feb112026.md
+++ b/content/post/feb112026.md
@@ -65,7 +65,8 @@ Nightingale |>
          period = ifelse(Date <= as.Date("1855-03-01"), 
                          "APRIL 1854 TO MARCH 1855",
                          "APRIL 1855 TO MARCH 1856"),
-         Month = fct_relevel(Month, "Jul", "Aug", "Sep", "Oct", "Nov", "Dec", "Jan", "Feb", "Mar", "Apr", "May", "Jun"))|>
+         Month = fct_relevel(Month, "Jul", "Aug", "Sep", "Oct", "Nov", "Dec", "Jan", "Feb", "Mar", "Apr", "May", "Jun"),
+         Cause = fct_relevel(Cause, "Disease", "Wounds", "Other"))|>
   ggplot(aes(x=Month, y=Rate, fill=Cause)) + 
   geom_col(width=1, alpha=0.5) + 
   coord_equal(ratio = 1) +  
